repair the temporal check codes

--- a/Process_1_GEE_Python_Classification/BackGround_modules/Class_5_Temporal_consistency_check.ipynb
+++ b/Process_1_GEE_Python_Classification/BackGround_modules/Class_5_Temporal_consistency_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "    is that \"conversion from built to non-built hardly happens\". So, given a pixel in a series\n",
     "    of classified images, if this pixel is a built-up pixel at start time, and remain as a \n",
     "    more than half of times in the next periods, we then confirm this pixel is a built-up \n",
-    "    pixeal, otherwise change it to a non-built pixel.\n",
+    "    pixel, otherwise change it to a non-built pixel.\n",
     "    \n",
     "    ________________________________A General Description__________________________________\n",
     "    \n",
@@ -96,32 +96,33 @@
     " \n",
     "    # define the names of each period\n",
     "    year_range = list(f'{i[0]}_{i[1]}' for i in zip(range(1990,2018,3),range(1992,2020,3)))\n",
-    "    \n",
+    "\n",
     "    # get the classified_random_imgs and sum them up for each period\n",
     "    Classified_Landsat_1990_2019 = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Control_{year}\")\n",
     "                                      .sum().gte(8).set('name',year)   for year in year_range]\n",
-    "                                      \n",
+    "\n",
     "    Classified_Sentinel_2014_2019 = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Sentinel_Landsat_{year}\")\n",
     "                                      .sum().gte(8).set('name',year)   for year in year_range[-2:]]\n",
     "\n",
     "    # combine classification img together\n",
     "    Classified_imgs = Classified_Landsat_1990_2019[:-2] + Classified_Sentinel_2014_2019\n",
-    "    \n",
+    "\n",
     "    # get the temporal checked imgs\n",
-    "    Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,6,10).Iterate_the_check()\n",
-    "    \n",
+    "    Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,3,5).Iterate_the_check(mode = 'only_forward')\n",
+    "\n",
     "    # visulize the maps\n",
     "    Map = geemap.Map()\n",
     "    Map.setCenter(115.4508, 35.2492,10)\n",
     "\n",
-    "    year_idx = 4\n",
+    "    year_idx = 2\n",
     "\n",
     "    Map.add_basemap('HYBRID')\n",
     "    Map.addLayer(Classified_imgs[year_idx] ,{'min':0,'max':1},'origin')\n",
-    "    Map.addLayer(Iter_temporal_check_instaces[0][year_idx] ,{'min':0,'max':1},'Iter_0')\n",
     "    Map.addLayer(Iter_temporal_check_instaces[1][year_idx] ,{'min':0,'max':1},'Iter_1')\n",
     "    Map.addLayer(Iter_temporal_check_instaces[2][year_idx] ,{'min':0,'max':1},'Iter_2')\n",
     "    Map.addLayer(Iter_temporal_check_instaces[3][year_idx] ,{'min':0,'max':1},'Iter_3')\n",
+    "    Map.addLayer(Iter_temporal_check_instaces[4][year_idx] ,{'min':0,'max':1},'Iter_4')\n",
+    "    Map.addLayer(Iter_temporal_check_instaces[5][year_idx] ,{'min':0,'max':1},'Iter_5')\n",
     "\n",
     "    Map\n",
     "    \n",
@@ -139,9 +140,12 @@
     "        self.Check_threshold = Check_len + math.ceil((len(self.Check_wieght) - 1)/2)\n",
     "        \n",
     "        # print out the check parameters\n",
+    "        print('================  Check Report  ================')\n",
     "        print(f'Check length is    ---> {self.Check_len}')\n",
-    "        print(f'Check weights is   ---> {self.Check_wieght}')\n",
+    "        print(f'Check weights are  ---> {self.Check_wieght}')\n",
     "        print(f'Check threshold is ---> {self.Check_threshold}')\n",
+    "        print(f'Check iteration is ---> {self.iteration_num}')\n",
+    "        print('================================================')\n",
     "    \n",
     " \n",
     "\n",
@@ -187,17 +191,34 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "    def Forward_backward(self,temporal_check_len,in_imgs):\n",
-    "\n",
+    "    def Forward(self,temporal_check_len,in_imgs):\n",
+    "        \n",
     "        # because temporal check can not been conducted at the edge, so we define an index-range to those\n",
     "        # img that can be checked in the process\n",
     "        img_idx_for_temporal_check = range(len(in_imgs) - temporal_check_len + 1)\n",
     "\n",
+    "        # slice the forward_input_tifs into chunks with the length of temporal_check_len\n",
+    "        forward_chunks  = [in_imgs[i:i + temporal_check_len] for i in img_idx_for_temporal_check]\n",
     "\n",
-    "        #_______________________________Backward temporal check________________________________________________\n",
+    "        # perform the forward temporal check\n",
+    "        forward_tif     = [self.Temporal_check('forward',chunk,self.Check_wieght) \n",
+    "                           for chunk in forward_chunks]\n",
+    "        \n",
+    "        # add the imgs of the edge to checked list, so we get a full img list \n",
+    "        forward_checked = forward_tif + in_imgs[-temporal_check_len + 1:]\n",
     "\n",
+    "        return forward_checked\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    def Backward(self,temporal_check_len,in_imgs):\n",
+    "\n",
+    "        # because temporal check can not been conducted at the edge, so we define an index-range to those\n",
+    "        # img that can be checked in the process\n",
+    "        img_idx_for_temporal_check = range(len(in_imgs) - temporal_check_len + 1)\n",
+    "        \n",
     "        # because this is backward check, so first reverse the img order\n",
     "        reverse_classified_tifs = in_imgs[::-1]\n",
     "\n",
@@ -207,62 +228,183 @@
     "        # perform the backward temporal check\n",
     "        backward_tif    = [self.Temporal_check('backward',chunk,self.Check_wieght) \n",
     "                           for chunk in backward_chunks]\n",
+    "        \n",
+    "        # add the edge tifs to backward_tif and return the result\n",
+    "        backward_checked = in_imgs[:temporal_check_len-1] + backward_tif[::-1]\n",
+    "        \n",
+    "        return backward_checked\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
-    "\n",
-    "        #_______________________________Forward temporal check________________________________________________\n",
-    "\n",
-    "        # because the backward_tif are in reversed (descending) order, so reverse it back\n",
-    "        backward_tif_ascending = backward_tif[::-1]\n",
-    "\n",
-    "        # add the imgs not been checked at the backward process,so we get a full-length img list for forward check    \n",
-    "        forward_input_tifs = in_imgs[:temporal_check_len] + backward_tif_ascending\n",
-    "\n",
-    "        # slice the forward_input_tifs into chunks with the length of temporal_check_len\n",
-    "        forward_chunks  = [forward_input_tifs[i:i + temporal_check_len] for i in img_idx_for_temporal_check]\n",
-    "\n",
-    "        # perform the forward temporal check\n",
-    "        forward_tif     = [self.Temporal_check('forward',chunk,self.Check_wieght) \n",
-    "                           for chunk in forward_chunks]\n",
-    "\n",
-    "\n",
-    "        #___________________________Add Forward & Backward checked img together___________________________________\n",
-    "\n",
-    "        # add the imgs not been checked at the forward process,so we get a completed img list  \n",
-    "        backward_forward = forward_tif + backward_tif_ascending[-(temporal_check_len - 1) :]\n",
-    "\n",
-    "        return backward_forward\n",
-    "\n",
-    "    def Iterate_the_check(self):\n",
+    "    def Iterate_the_check(self,mode = 'only_forward'):\n",
     "        \n",
     "                      \n",
     "        # Here iterate Check_iteration_num times and \n",
     "        Iter_temporal_check_instaces = {}\n",
-    "\n",
     "        \n",
-    "        for it in range(self.iteration_num):\n",
+    "        for it in range(1,self.iteration_num+1):\n",
+    "            \n",
+    "            #_______________________________here defines what happens in 'back_forward' mode_____________________________\n",
+    "            if mode == 'backward_forward':\n",
+    "            \n",
+    "                if it == 1:\n",
     "\n",
-    "            if it == 0:\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    backward_checked  = self.Backward(self.Check_len,self.classified_imgs)\n",
+    "                    temporal_checked  = self.Forward(self.Check_len,backward_checked)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "                    \n",
+    "                    # put the first iteration into result dictionary\n",
+    "                    Iter_temporal_check_instaces[1]  = check_with_iteration\n",
     "\n",
-    "                forward_backward_checked =  self.Forward_backward(self.Check_len,self.classified_imgs)\n",
-    "                forward_backward_with_iteration = [ee.Image(img).set('iteration',it) for img in forward_backward_checked]\n",
     "\n",
-    "                Iter_temporal_check_instaces[0]  = forward_backward_with_iteration\n",
+    "                else:\n",
+    "\n",
+    "                    in_imgs = Iter_temporal_check_instaces[it-1]\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    backward_checked  = self.Backward(self.Check_len,in_imgs)\n",
+    "                    temporal_checked  = self.Forward(self.Check_len,backward_checked)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "\n",
+    "                    Iter_temporal_check_instaces[it]  = check_with_iteration\n",
+    "                    \n",
+    "                    \n",
+    "            #______________________________here defines what happens in 'forward_backward' mode______________________________\n",
+    "            elif mode == 'forward_backward':\n",
+    "            \n",
+    "                if it == 1:\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    forward_checked   = self.Forward(self.Check_len,self.classified_imgs)\n",
+    "                    temporal_checked  = self.Backward(self.Check_len,forward_checked)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "                    \n",
+    "                    # put the first iteration into result dictionary\n",
+    "                    Iter_temporal_check_instaces[1]  = check_with_iteration\n",
     "\n",
     "\n",
+    "                else:\n",
+    "\n",
+    "                    in_imgs = Iter_temporal_check_instaces[it-1]\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    forward_checked   = self.Forward(self.Check_len,in_imgs)\n",
+    "                    temporal_checked  = self.Backward(self.Check_len,forward_checked)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "\n",
+    "                    Iter_temporal_check_instaces[it]  = check_with_iteration\n",
+    "                    \n",
+    "            #__________________________here defines what happens in 'only_forward' mode_________________________________\n",
+    "            elif mode == 'only_forward':\n",
+    "            \n",
+    "                if it == 1:\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    temporal_checked   = self.Forward(self.Check_len,self.classified_imgs)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "                    \n",
+    "                    # put the first iteration into result dictionary\n",
+    "                    Iter_temporal_check_instaces[1]  = check_with_iteration\n",
+    "\n",
+    "\n",
+    "                else:\n",
+    "\n",
+    "                    in_imgs = Iter_temporal_check_instaces[it-1]\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    temporal_checked = self.Forward(self.Check_len,in_imgs)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "\n",
+    "                    Iter_temporal_check_instaces[it]  = check_with_iteration\n",
+    "                    \n",
+    "            #___________________________here defines what happens in 'only_backward' mode_________________________________\n",
+    "            elif mode == 'only_backward':\n",
+    "            \n",
+    "                if it == 1:\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    temporal_checked   = self.Backward(self.Check_len,self.classified_imgs)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "                    \n",
+    "                    # put the first iteration into result dictionary\n",
+    "                    Iter_temporal_check_instaces[1]  = check_with_iteration\n",
+    "\n",
+    "\n",
+    "                else:\n",
+    "\n",
+    "                    in_imgs = Iter_temporal_check_instaces[it-1]\n",
+    "\n",
+    "                    # first proceed the backward check, then the forward check\n",
+    "                    temporal_checked = self.Backward(self.Check_len,in_imgs)\n",
+    "                    \n",
+    "                    # write the iteration number to the img attribute\n",
+    "                    check_with_iteration = [ee.Image(img).set('iteration',it) for img in temporal_checked]\n",
+    "\n",
+    "                    Iter_temporal_check_instaces[it]  = check_with_iteration\n",
+    "                    \n",
+    "            # in case given an incorrect mode        \n",
     "            else:\n",
-    "\n",
-    "                in_imgs = Iter_temporal_check_instaces[it-1]\n",
-    "\n",
-    "                forward_backward_checked =  self.Forward_backward(self.Check_len,self.classified_imgs)\n",
-    "                forward_backward_with_iteration = [ee.Image(img).set('iteration',it) for img in forward_backward_checked]\n",
-    "\n",
-    "                Iter_temporal_check_instaces[it]  = forward_backward_with_iteration\n",
-    "\n",
+    "                print(\"Please provide a correct mode ['only_backward'|'only_forward'|'forward_backward'|'backward_forward']\")\n",
+    "                    \n",
+    "                    \n",
+    "        # here add the checked imgs to the class attribute, and return it\n",
     "        self.Iter_temporal_check_instaces = Iter_temporal_check_instaces\n",
     "        \n",
     "        return self.Iter_temporal_check_instaces"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
