--- a/Process_2_Temporal_Check/Temporal_Check.ipynb
+++ b/Process_2_Temporal_Check/Temporal_Check.ipynb
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,118 +2057,44 @@
     "classification_window_3 = Check_instaces_long[(Check_instaces_long['Window'] == 3)&\\\n",
     "                                              (Check_instaces_long['Iteration'] == 1)][['year','Image']]\n",
     "\n",
-    "# g"
+    "# import the export region\n",
+    "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>Image</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>1990_1992</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>1993_1995</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>1996_1998</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>1999_2001</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>2002_2004</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>2005_2007</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>2008_2010</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>2011_2013</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>2014_2016</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>2017_2019</td>\n",
-       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         year                                              Image\n",
-       "60  1990_1992  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "61  1993_1995  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "62  1996_1998  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "63  1999_2001  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "64  2002_2004  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "65  2005_2007  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "66  2008_2010  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "67  2011_2013  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "68  2014_2016  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...\n",
-       "69  2017_2019  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume..."
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting Temporal_checked_1990_1992 successful!\n",
+      "Exporting Temporal_checked_1993_1995 successful!\n",
+      "Exporting Temporal_checked_1996_1998 successful!\n",
+      "Exporting Temporal_checked_1999_2001 successful!\n",
+      "Exporting Temporal_checked_2002_2004 successful!\n",
+      "Exporting Temporal_checked_2005_2007 successful!\n",
+      "Exporting Temporal_checked_2008_2010 successful!\n",
+      "Exporting Temporal_checked_2011_2013 successful!\n",
+      "Exporting Temporal_checked_2014_2016 successful!\n",
+      "Exporting Temporal_checked_2017_2019 successful!\n"
+     ]
     }
    ],
    "source": [
     "for idx,row in classification_window_3.iterrows():\n",
     "    \n",
     "    year = row[0]\n",
-    "    img  = row[2]\n",
+    "    img  = row[1]\n",
     "    \n",
     "    # determine the img name\n",
     "    export_name = f'Temporal_checked_{year}'\n",
@@ -2187,20 +2113,6 @@
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
