Temporal check, for all 4 modes

--- a/Process_1_GEE_Python_Classification/BackGround_modules/Class_5_Temporal_consistency_check.ipynb
+++ b/Process_1_GEE_Python_Classification/BackGround_modules/Class_5_Temporal_consistency_check.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,13 +151,8 @@
     "\n",
     "    def Temporal_check(self,mode,in_tifs,weights):\n",
     "\n",
-    "        # get the name of the first img as the property for return img\n",
-    "        name = ee.Image(in_tifs[0]).get('name')\n",
-    "\n",
     "        # zip classified_random_sum with weights\n",
     "        img_multiply = list(zip(in_tifs,self.Check_wieght))\n",
-    "\n",
-    "\n",
     "\n",
     "        if mode == 'forward':\n",
     "\n",
@@ -166,7 +161,7 @@
     "            sum_tif = ee.ImageCollection([i[0].multiply(i[1]) for i in img_multiply]).sum()\n",
     "\n",
     "            # thoes pixel that GREATE THAN OR EQUALS are built-up pixel\n",
-    "            temporal_checked = sum_tif.gte(self.Check_threshold).set('name',name)\n",
+    "            temporal_checked = sum_tif.gte(self.Check_threshold)\n",
     "\n",
     "        elif mode == 'backward':\n",
     "\n",
@@ -241,6 +236,19 @@
     "\n",
     "    def Iterate_the_check(self,mode = 'only_forward'):\n",
     "        \n",
+    "        '''Here are there mode ==> 'only_backward'|'only_forward'|'forward_backward'|'backward_forward'\n",
+    "        \n",
+    "        The defalt mode is only_forward, which means only correct pixel \n",
+    "        that were incorrecly classified as \"built\" to \"non-built\"\n",
+    "        \n",
+    "        1) 'only_backward' ==> slide a moving window from end year to start year (backward)\n",
+    "            and correct the pixel that are incorrecly classified as \"non-built\" to \"built\"\n",
+    "        2) 'only_forward' ==> slide a moving window from the start year to end year (forward)\n",
+    "            and correct the pixel that are incorrecly classified as \"built\" to \"non-built\"\n",
+    "        3) 'forward_backward' ==> first slide the 'only_backward' then the 'only_forward'\n",
+    "        4) 'forward_backward' ==> first slide the 'only_forward' then the 'only_backward'\n",
+    "        \n",
+    "        '''\n",
     "                      \n",
     "        # Here iterate Check_iteration_num times and \n",
     "        Iter_temporal_check_instaces = {}\n",
@@ -370,13 +378,6 @@
     "        \n",
     "        return self.Iter_temporal_check_instaces"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
