Calculate the accuracy of different input bands

--- a/Process_1_GEE_Python_Classification/Sub_Process_2_Data_preparation_Create_Normalized_index_images/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_2_Data_preparation_Create_Normalized_index_images/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export the NDVI img"
+    "### Export the Normalized img"
    ]
   },
   {
