--- a/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
@@ -1424,9 +1424,9 @@
     }
    ],
    "source": [
-    "# store the acc_df to local drive\n",
-    "acc_df = pd.concat([Classification_instances_df[['year','seed']],pd.DataFrame(acc)],axis=1)\n",
-    "acc_df.to_csv('./Result/Classification_Accuracy.csv',index=False)\n",
+    "# # store the acc_df to local drive\n",
+    "# acc_df = pd.concat([Classification_instances_df[['year','seed']],pd.DataFrame(acc)],axis=1)\n",
+    "# acc_df.to_csv('./Result/Classification_Accuracy.csv',index=False)\n",
     "\n",
     "# access the acc_df\n",
     "acc_df = pd.read_csv('./Result/Classification_Accuracy.csv')\n",
