--- a/Process_2_Temporal_Check/Step_1_Temporal_Check.ipynb
+++ b/Process_2_Temporal_Check/Step_1_Temporal_Check.ipynb
@@ -1024,7 +1024,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Observe that a window-size of 3 is the optimun size"
+    "##### Observe that the forward_backward mode are the best mode"
    ]
   },
   {
@@ -1069,6 +1069,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observe that  9 iterations  achieved a stable accuracy. here we neglect the seemingly high accuracy at lower iterations because we care more about stable performance, which is the key of temporal correction"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
@@ -1098,6 +1112,20 @@
    "source": [
     "plt.figure(figsize=(12,8))\n",
     "sns.lineplot(data = Checked_acc[Checked_acc['Mode']!='0'],x='Iteration',y='Accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observe that window-size of 3 is the optimun size, because the bigger the window size, the more imgs wouldn't be temporal corrected. So we choose 3 as window size even though 5 look like the best one"
    ]
   },
   {
