--- a/Process_3_Making_figures/Fig_1_Restore the Fourier fitting.ipynb
+++ b/Process_3_Making_figures/Fig_1_Restore the Fourier fitting.ipynb
@@ -332,8 +332,8 @@
    ],
    "source": [
     "plt.figure(figsize=(16,9))\n",
-    "sns.lineplot(x='time',y='Fit_NDVI',data=Original_Fitted)\n",
-    "sns.lineplot(x='time',y='NDVI',    data=Original_Fitted)"
+    "sns.lineplot(x='time',y='Fit_NDVI',data=Original_Fitted, label = 'Fit')\n",
+    "sns.lineplot(x='time',y='NDVI',    data=Original_Fitted, label = 'Original')"
    ]
   },
   {
