GGplot2 making figures

--- a/Process_1_GEE_Python_Classification/Sub_Process_5_Random_stratify_to_create_non_built_control_samples/Sample_Points_Creation_Random_Stratified.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_5_Random_stratify_to_create_non_built_control_samples/Sample_Points_Creation_Random_Stratified.ipynb
@@ -201,7 +201,7 @@
     "                          columns=['NDVI','Freq'])\n",
     "    \n",
     "    # Calculate the Select_num by multiply num_non_built with the proportion of each NDVI frequency\n",
-    "    tmp_df['Select_num'] = tmp_df['Freq'].apply(lambda x: round(x*num_non_built/(tmp_df['Freq'].sum())))\n",
+    "    tmp_df['Select_num'] = tmp_df['Freq'].apply(lambda x: round(num_non_built*x/(tmp_df['Freq'].sum())))\n",
     "    \n",
     "    # concate the tmp_df to \n",
     "    NDVI_hist_df = pd.concat([NDVI_hist_df,tmp_df])\n",
@@ -360,9 +360,9 @@
     }
    ],
    "source": [
-    "# save the NDVI_hist_df to local disk\n",
-    "NDVI_hist_df.index.name = 'Year_range'\n",
-    "NDVI_hist_df.to_csv('./Result_df/NDVI_area_propotion.csv')\n",
+    "# # save the NDVI_hist_df to local disk\n",
+    "# NDVI_hist_df.index.name = 'Year_range'\n",
+    "# NDVI_hist_df.to_csv('./Result_df/NDVI_area_propotion.csv')\n",
     "\n",
     "# load the NDVI_hist_df from locak disk\n",
     "NDVI_hist_df = pd.read_csv('./Result_df/NDVI_area_propotion.csv')\n",
