Pack the restoring fourier fitting to a module

--- a/Process_3_Explore_Result/Fig_3_Landsat_Temporal_Distribution.ipynb
+++ b/Process_3_Explore_Result/Fig_3_Landsat_Temporal_Distribution.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,10 +282,10 @@
     "# ID_s_df.columns = ['Year','Month','Day']\n",
     "\n",
     "# # save the df to csv\n",
-    "# ID_s_df.to_csv('./Calculationg_result/Fig_3_Sentinel_distribution.csv',index =False)\n",
+    "# ID_s_df.to_csv('./Result/Sentinel_distribution.csv',index =False)\n",
     "\n",
     "# load the df \n",
-    "ID_s_df = pd.read_csv('./Calculationg_result/Fig_3_Sentinel_distribution.csv')"
+    "ID_s_df = pd.read_csv('./Result/Sentinel_distribution.csv')"
    ]
   },
   {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,10 +315,10 @@
     "# ID_df['Month'] = ID_df['Date'].apply(lambda x:x[4:6])\n",
     "\n",
     "# # save the df to csv\n",
-    "# ID_df.to_csv('./Calculationg_result/Fig_3_Landsat_distribution.csv',index =False)\n",
+    "# ID_df.to_csv('./Result/Landsat_distribution.csv',index =False)\n",
     "\n",
     "# load the df \n",
-    "ID_df = pd.read_csv('./Calculationg_result/Fig_3_Landsat_distribution.csv')"
+    "ID_df = pd.read_csv('./Result/Landsat_distribution.csv')"
    ]
   },
   {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -408,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1288810b588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fe27fda2b0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -448,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x128880875c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fe29b00eb8>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -694,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
