--- a/Process_1_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
+++ b/Process_1_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
@@ -62,11 +62,11 @@
     "    #____________OUT_PUT______________\n",
     "    \n",
     "    # get the Fourier img. the Fourier img has been converted to integer\n",
-    "    # using -->multiply(1000).toInt16()\n",
+    "    # by -->multiply(1000).toInt16()\n",
     "    Fourier_img = test.harmonicTrendCoefficients\n",
     "    \n",
     "    # get the Residule img.the Residule_img img has been converted to integer\n",
-    "    # using -->multiply(1000).toInt16()\n",
+    "    # by -->multiply(1000).toInt16()\n",
     "    Residule_img = test.harmonicTrendResidule\n",
     "    \n",
     "    # get discrete original/fitted Normalized value\n",
@@ -206,7 +206,7 @@
     "            # Using linearRgression to perform the Fourier Transformation\n",
     "            # The output of the regression reduction is a [(n+2) x 1] array image, where n is harmonics.\n",
     "            harmonicTrend = self.harmonicLandsat.select(ee.List(self.sinuate_and_constant).add(dependent)) \\\n",
-    "                    .reduce(ee.Reducer.linearRegression(ee.List(self.sinuate_and_constant).length(), 1)) \n",
+    "                                .reduce(ee.Reducer.linearRegression(ee.List(self.sinuate_and_constant).length(), 1)) \n",
     "\n",
     "            # Turn the array image into a multi-band image of coefficients.\n",
     "            # 1) get the coefficients\n",
